--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">  
         <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">ศาสนสถาน / โบสถ์</h3>
         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">คริสตจักรพระกิตติคุณสมบูรณ์ธารทิพย์</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ที่อยู่คริสตจักร หมู่ที่7 ต บุ่งน้ำเต้า อ หล่มสัก จ เพชรบูรณ์</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ที่อยู่คริสตจักร 103/1หมู่ที่7 ต บุ่งน้ำเต้า อ หล่มสัก จ เพชรบูรณ์</h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">เปิดทุกวันอาทิตย์ ประชุมตั้งแต่เวลา 10.00น. - 12.00น.</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
