--- a/page3.html
+++ b/page3.html
@@ -34,7 +34,7 @@
         <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">คริสตจักรพระกิตติคุณสมบูรณ์ธารทิพย์</h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold"></h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">คริสตจักรพระกิตติคุณสมบูรณ์ธารทิพย์ของเรานั้น จะมีสมาชิกอยู่ประมาณ 50 คน</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">เริ่มนมัสการตั้งแต่10.00น.-11.00น. ประชุมตั้งแต่เวลา 10.00น. - 12.00น.</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">เริ่มนมัสการตั้งแต่10.00น.-12.00น.</h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ร่วมรับประทานอาหารกับสมาชิกในคริสตจักร 12.00 น.</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
