--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">ศาสนสถาน / โบสถ์</h3>
         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">คริสตจักรพระกิตติคุณสมบูรณ์ธารทิพย์</h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ที่อยู่คริสตจักร 103/1หมู่ที่7 ต บุ่งน้ำเต้า อ หล่มสัก จ เพชรบูรณ์</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ตั้งแต่เวลา 10.00น. - 12.00น.</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">นมัสการตั้งแต่เวลา 10.00น. - 12.00น.ทุกวันอาทิตย์</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
             <img src="IMG.1.jpg" alt="Bootstrap" width="300" height="300" class="rounded-circle border border-white">
