--- a/page1.html
+++ b/page1.html
@@ -32,9 +32,9 @@
 
       <!-- Features -->
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">  
-        <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">ทีมนำนมัสการและนักดนตรี</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">คุณวิลรี่ ชัยงาม ผู้นำนมัสการ</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">คุณมานิตา / คุณจันทรา / คุณอรไพลิน นักดนตรี</h3>
+        <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">ทีมนมัสการและนักดนตรี</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ผู้นำนมัสการ คุณวิลรี่ ชัยงาม</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">นักดนตรีและทีมนมัสการ คุณมานิตา / คุณจันทรา / คุณอรไพลิน</h3>
         <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">เริ่มนมัสการตั้งแต่10.00น.-11.00น. ประชุมตั้งแต่เวลา 10.00น. - 12.00น.</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
@@ -73,7 +73,7 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
         <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
           <div class="my-3 py-3">
-            <h2 class="display-5">นมัสการ 2 ตุลาคม 2022</h2>
+            <h2 class="display-5">อาทิตย์ที่ 2 ตุลาคม 2022</h2>
             <p class="lead">ทักทายเตรียมใจ</p>
           </div>
           <div class="bg-light shadow-sm mx-auto" style="color: #000;: 80%; height: 300px; border-radius: 21px 21px 0 0;"><h1>นมัสการ</h1>
