--- a/page2.html
+++ b/page2.html
@@ -32,8 +32,8 @@
 
       <!-- Features -->
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">  
-        <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">เทศนาพระคัมภีร์</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">ท่าน ศจ. ปกาศิต ชัยงาม หน้าที่เทศนา</h3>
+        <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold"></h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">เทศนาโดย ท่าน ศจ. ปกาศิต ชัยงาม</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
           </li>
