--- a/page2.html
+++ b/page2.html
@@ -71,7 +71,7 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
         <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
           <div class="my-3 py-3">
-            <h2 class="display-5">เทศนาพระคัมภีร์ 2 ตุลาคม 2022</h2>
+            <h2 class="display-5">อาทิตย์ที่ 2 ตุลาคม 2022</h2>
             <p class="lead">2ค.ร13.5</p>
           </div>
           <div class="bg-light shadow-sm mx-auto" style="color: #000;: 80%; height: 300px; border-radius: 21px 21px 0 0;"><h1>เทศนาพระคัมภีร์หัวข้อเรื่อง </h1>
