--- a/page2.html
+++ b/page2.html
@@ -82,6 +82,11 @@
           <p>2.1 พิสูจน์ การกลับใจ ด้วยผลที่เกิดขึ้น ว่าสนิทกลับพระเจ้าชึ้นทุกวันหรือเริ่มห่างออกในทุกทีกับดักของโลก กำลังดึงเขาออกห่างจากพระเจ้า</p>
           <p>ถ้าเราไม่มีความรู้สึกตื่นเต้นกับพระเจ้าในทุกเรื่อง แต่เริ่มเฉยๆนั้น แสดงว่านี่คือ อาการหล่นจากความเชื่อ มานาน เริ่มถดถอยกับพระเจ้าแล้วในความเชื่อ</p>
           <p>2.2 ชันสูจน์ตัวเอง เวลาที่อยู่ในสังคม ว่าเราอยู่ท่ามกลางคนเป็นอย่างไร และเมื่ออยู่กับคนไม่เชื่อเราเป็นอย่างไร เราเป็นดังหนังสือของพระคริสต หรือเป็นของโลก</p>
+          <p>สรุปนมัสการ  เราต้องสำแดงชีวิตในความเชื่อในพระเจ้า ไม่ถูกชักจูงหรือหวั่นไหว หรือทำในสิ่งที่คนไม่รู้จักพระเจ้าทำเพื่อยืนยันความเชื่อโดยการกระทำที่แตกต่างจากคนที่ไม่เชื่อพระเจ้า</p>
+          <p>พิธีศิลมหาสนิท ผู้ประกอบพิธี ศจ.ปกาศิต ชัยงาม</p>
+          <p>เชิญถ้วยน้ำองุ่นและขนมปัง โดย ผป.จาย ใจแอ้ม ผป.ลำหยวน สมมูล</p>
+          <p>อธิฐานขอพร ศจ ปกาศิต ชัยงาม</p>
+          <p>พี่น้องรับประทานอาหารร่วมกัน</p>
         </div>
 
     <script src="js/bootstrap.min.js"></script>
