--- a/page5.html
+++ b/page5.html
@@ -32,9 +32,7 @@
       <!-- Features -->
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">  
         <h3 class="pt-4 mt-4 mb-3 display-5 lh-1 fw-bold">ช่องทางติดต่อคริสตจักร</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">telephone number 0000000000</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">LINE ID</h3>
-        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">FACEBOOK</h3>
+        <h3 class="pt-6 mt-6 mb-5 display-7 lh-2 fw-bold">telephone number 086 204 5178 ศจ.ปกาศิต ชัยงาม</h3>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
           </li>
