--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           </li>
           <li class="d-flex align-items-center me-3">
             <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-            <small>California</small>
+            <small></small>
           </li>
           <li class="d-flex align-items-center">
             <svg class="bi me-2" width="5em" height="5em"><use xlink:href="#calendar3"></use></svg>
-            <small>10d</small>
+            <small></small>
           </li>
         </ul>
       </div>
