--- a/page1.html
+++ b/page1.html
@@ -60,11 +60,11 @@
             </li>
             <li class="d-flex align-items-center me-3">
               <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-              <small>Pakistan</small>
+              <small></small>
             </li>
             <li class="d-flex align-items-center">
               <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-              <small>4d</small>
+              <small></small>
             </li>
           </ul>
         </div>
