--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </h1>
 
           <ul class="nav nav-pills">
+            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">หน้าแรก</a></li>
             <li class="nav-item"><a href="page1.html" class="nav-link">นมัสการ</a></li>
             <li class="nav-item"><a href="page2.html" class="nav-link">เทศนาพระคัมภีร์</a></li>
             <li class="nav-item"><a href="page3.html" class="nav-link">เกี่ยวกับเรา</a></li>
