--- a/page1.html
+++ b/page1.html
@@ -19,8 +19,8 @@
         </h1>
 
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">หน้าแรก</a></li>
-            <li class="nav-item"><a href="page1.html" class="nav-link">นมัสการ</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
+            <li class="nav-item"><a href="page1.html" class="nav-link active" aria-current="page">นมัสการ</a></li>
             <li class="nav-item"><a href="page2.html" class="nav-link">เทศนาพระคัมภีร์</a></li>
             <li class="nav-item"><a href="page3.html" class="nav-link">เกี่ยวกับเรา</a></li>
             <li class="nav-item"><a href="page4.html" class="nav-link">กิจกรรม</a></li>
