--- a/page2.html
+++ b/page2.html
@@ -19,9 +19,9 @@
         </h1>
 
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">หน้าแรก</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
             <li class="nav-item"><a href="page1.html" class="nav-link">นมัสการ</a></li>
-            <li class="nav-item"><a href="page2.html" class="nav-link">เทศนาพระคัมภีร์</a></li>
+            <li class="nav-item"><a href="page2.html" class="nav-link active" aria-current="page">เทศนาพระคัมภีร์</a></li>
             <li class="nav-item"><a href="page3.html" class="nav-link">เกี่ยวกับเรา</a></li>
             <li class="nav-item"><a href="page4.html" class="nav-link">กิจกรรม</a></li>
             <li class="nav-item"><a href="page5.html" class="nav-link">ติดต่อเรา</a></li>
@@ -39,11 +39,11 @@
           </li>
           <li class="d-flex align-items-center me-3">
             <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-            <small>Thailand</small>
+            <small></small>
           </li>
           <li class="d-flex align-items-center">
             <svg class="bi me-2" width="5em" height="5em"><use xlink:href="#calendar3"></use></svg>
-            <small>tantipchurch</small>
+            <small></small>
           </li>
         </ul>
       </div>
@@ -58,11 +58,11 @@
             </li>
             <li class="d-flex align-items-center me-3">
               <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-              <small>Thailand</small>
+              <small></small>
             </li>
             <li class="d-flex align-items-center">
               <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-              <small>tantipchurch</small>
+              <small></small>
             </li>
           </ul>
         </div>
